[package]
name = "baluchon"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 2
